# pseudo-vision

./: .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md  config.yaml  package.xml  requirements.txt
launch/: collect_data.launch  pvision_cnn_nav.launch  pvision_fcnn_nav.launch  pvision_timm_nav.launch
msg/: Image.msg  TrainingData.msg
scripts/: collect_data.py  publish_occupancy_grid.py  pvision_cnn_nav.py  pvision_fcnn_nav.py  pvision_timm_nav.py
scripts/models/: __init__.py  cnn.py  fcnn.py  timm.py
scripts/utils/: __init__.py  get_occupancy_grid.py  lightning_to_torch.py  radial_to_xy.py  visualize_return_layers.py
